--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.4",
     "asyncpg>=0.30.0",
+    "bcrypt>=4.3.0",
     "fastapi>=0.116.1",
+    "passlib>=1.7.4",
     "pydantic-settings>=2.10.1",
+    "pydantic[email]>=2.11.7",
+    "python-jose>=3.5.0",
     "sqlalchemy>=2.0.42",
     "uvicorn>=0.35.0",
 ]
