--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.116.1",
+    "jinja2>=3.1.6",
     "passlib>=1.7.4",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
     "python-jose>=3.5.0",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.42",
     "uvicorn>=0.35.0",
 ]
