--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,18 @@ dependencies = [
     "alembic>=1.16.4",
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
+    "celery>=5.5.3",
     "fastapi>=0.116.1",
+    "fastapi-cache2>=0.2.2",
     "jinja2>=3.1.6",
+    "loguru>=0.7.3",
     "passlib>=1.7.4",
+    "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
+    "redis>=6.4.0",
     "sqlalchemy>=2.0.42",
     "uvicorn>=0.35.0",
 ]
