--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "celery>=5.5.3",
+    "celery-types==0.23.0"
     "fastapi>=0.116.1",
     "fastapi-cache2>=0.2.2",
     "jinja2>=3.1.6",
@@ -20,6 +21,7 @@ dependencies = [
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
+    "sqladmin[full]>=0.21.0",
     "sqlalchemy>=2.0.42",
     "uvicorn>=0.35.0",
 ]
