--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "celery>=5.5.3",
-    "celery-types==0.23.0"
+    "celery-types==0.23.0",
     "fastapi>=0.116.1",
     "fastapi-cache2>=0.2.2",
     "jinja2>=3.1.6",
@@ -18,6 +18,7 @@ dependencies = [
     "pillow>=11.3.0",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
+    "pytest>=8.4.2",
     "python-jose>=3.5.0",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
